fix bug on firefox

--- a/src/app/css/base/_form.scss
+++ b/src/app/css/base/_form.scss
@@ -48,6 +48,7 @@
   color: #fff;
   transition: background-color 300ms ease-out;
   margin: 0;
+  letter-spacing: normal;
 }
 .row-form {
   width: 100%;
